workspace_1.11.0/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:36:32 **** Incremental Build of configuration Debug for project osiloscopio_micro ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F302x8 -c -I../Core/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F3xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:139:23: warning: format '%u' expects argument of type 'unsigned int', but argument 3 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
  139 |      sprintf(valor, "%u\n",adc);
      |                      ~^    ~~~
      |                       |    |
      |                       |    uint32_t {aka long unsigned int}
      |                       unsigned int
      |                      %lu
../Core/Src/main.c:144:10: error: 'i' undeclared (first use in this function)
  144 |   setled(i , b , 1);
      |          ^
../Core/Src/main.c:144:10: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:144:14: error: 'b' undeclared (first use in this function)
  144 |   setled(i , b , 1);
      |              ^
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
